<resources>
    <string name="app_name">Calculator</string>
    <string name="button01">1</string>
    <string name="button02">2</string>
    <string name="button03">3</string>
    <string name="buttonAdd">+</string>
    <string name="button04">4</string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="button07">7</string>
    <string name="button08">8</string>
    <string name="button09">9</string>
    <string name="buttonDiv">/</string>
    <string name="buttonClear">CE</string>
    <string name="button0">0</string>
    <string name="buttonPer">.</string>
    <string name="buttonMul">*</string>
    <string name="buttonEQ">=</string>
    <string name="button_min">-</string>

</resources>
