<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ellenpc.calculator.MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="350dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button01" />

            <Button
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button02" />

            <Button
                android:id="@+id/button03"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button03" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonAdd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button04"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button04" />

            <Button
                android:id="@+id/button05"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button05" />

            <Button
                android:id="@+id/button06"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button06" />

            <Button
                android:id="@+id/buttonMin"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_min" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button07" />

            <Button
                android:id="@+id/button08"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button08" />

            <Button
                android:id="@+id/button09"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button09" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonDiv" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonClear" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button0" />

            <Button
                android:id="@+id/buttonPer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonPer" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonMul" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonEQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFunctionButton"
            android:text="@string/buttonEQ" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
